# exome_p

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
Docker/: Dockerfile  README.md  docker-compose.yml
exome_p/: asgi.py  settings.py  urls.py  wsgi.py
files_uploading/: admin.py  apps.py  forms.py  metrics.py  models.py  tests.py  types.py  utils.py  validators.py  vcf_processing.py  views.py
files_uploading/migrations/: 0001_initial.py  0002_auto_20201013_1313.py  0002_auto_20201019_1654.py  0003_remove_variant_alleles.py  0003_sample_vcf_file.py  0004_auto_20201013_1343.py
files_uploading/templates/: snp_search.html  table_viewer.html  upload.html
nationality_prediction/: apps.py  command_line_tools.py  constants.py  forms.py  predictors.py  validators.py  views.py
nationality_prediction/templates/: nationality_prediction_result.html  vcf_upload.html
short_tandem_repeats/: apps.py  forms.py  models.py  utils.py  views.py
short_tandem_repeats/templates/short_tandem_repeats/: str_search.html  str_search_result.html  str_table.html  str_upload.html
templates/: base.html  header.html
vcf_uploading/: admin.py  apps.py  forms.py  models.py  tests.py  types.py  utils.py  vcf_processing.py  views.py
vcf_uploading/templates/: samples_list.html  similar_samples.html  snp_search.html  snp_search_result.html  table_viewer.html  vcf_list.html  vcf_summary.html
vcf_uploading/templatetags/: file_extra_filters.py
