[tool.poetry]
name = "exome_p"
version = "0.1.0"
description = ""
authors = ["Vladimir Shitov"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
psycopg2 = "^2.8.6"
psycopg2-binary = "^2.8.6"
django-environ = "^0.4.5"
loguru = "^0.5.3"
pysam = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
